<resources>
    <string name="app_name" translatable="false">Activity Planner</string>
    <string name="title_home">Calendar</string>
    <string name="title_dashboard">List</string>
    <string name="title_settings">Settings</string>
    <string name="search_hint">Activity name</string>
    <string name="activity_type_work">Work</string>
    <string name="activity_type_free_time">Free time</string>
    <string name="activity_type_travel">Travel</string>
    <string name="no_items">There are no activities.</string>
    <string name="activity_title">Title</string>
    <string name="activity_description">Description</string>
    <string name="activity_date">Choose Date</string>
    <string name="activity_time">Choose Time</string>
    <string name="activity_location">Choose Location</string>
    <string name="activity_type">Choose Type</string>
    <string name="new_activity_title">New Activity</string>
    <string name="next_button">Next</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string-array name="activity_types">
        <item>@string/activity_type_work</item>
        <item>@string/activity_type_free_time</item>
        <item>@string/activity_type_travel</item>
    </string-array>
    <string name="add_activity_button">Add Activity</string>
    <string name="add_pictures_button">Add Pictures</string>
    <string name="previous">Previous</string>
    <string name="create_activity_error">Attribute(s) missing.</string>
    <string name="activity_created">Activity created.</string>
    <string name="details_location">Location: %s</string>
    <string name="date_selected">Date selected: %s</string>
    <string name="map_marker">Marker for %s</string>
    <string name="add_pictures_title">Add Pictures</string>
    <string name="url_hint">URL</string>
    <string name="url_button">Upload Via URL</string>
    <string name="upload_button">Upload From Device</string>
    <string name="camera_btn">Upload With Camera</string>
    <string name="finish_btn">Finish</string>
    <string name="picture_uploaded">Picture uploaded!</string>
    <string name="picture_delete_btn">Delete Picture</string>
    <string name="activity_delete_btn">Delete Activity</string>
    <string name="activity_deleted">Activity deleted!</string>
    <string name="invalid_url">Invalid URL.</string>

    <string name="language_preference">Select a language</string>
    <string name="language_preference_key" translatable="false">language</string>
    <string name="language_preference_default" translatable="false">sr</string>

    <string name="notifications_preference">Select notification period</string>
    <string name="notifications_preference_key" translatable="false">notifications</string>
    <string name="notifications_preference_default" translatable="false">0</string>
    <string name="notifications_off">Off</string>
    <string name="notifications_hour">1 hour</string>
    <string name="notifications_day">1 day</string>
    <string name="notifications_week">1 week</string>
    <string name="notifications_text">Upcoming activities: %d</string>

    <string name="snackbar_btn">View</string>
    <string name="upcoming_title">Upcoming activities</string>

    <string name="alert_delete_title">Delete activity</string>
    <string name="alert_delete_message">Are you sure?</string>

    <string name="intent_extra_from" translatable="false">from</string>
    <string name="intent_extra_to" translatable="false">to</string>
    <string name="intent_extra_activities" translatable="false">activities</string>
    <string name="intent_extra_activity" translatable="false">activity</string>
    <string name="intent_extra_pictures" translatable="false">pictures</string>
    <string name="bundle_extra_lat" translatable="false">lat</string>
    <string name="bundle_extra_long" translatable="false">long</string>
    <string name="bundle_extra_name" translatable="false">name</string>

    <string name="no_internet_message">No Internet connection.</string>
</resources>