<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.activityplanner.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_newActivityFragment"
            app:destination="@id/newActivityFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.activityplanner.ui.ListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_navigation_list_to_newActivityFragment"
            app:destination="@id/newActivityFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.activityplanner.ui.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/newActivityFragment"
        android:name="com.example.activityplanner.ui.NewActivityFragment"
        android:label="fragment_new_activity"
        tools:layout="@layout/fragment_new_activity" >
        <action
            android:id="@+id/action_newActivityFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_newActivityFragment_to_navigation_list"
            app:destination="@id/navigation_list" />
    </fragment>
</navigation>